methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:1: error: Missing closing brace `}' assumed here
def growFlowers()
^FlowerCase:1: error: expected class or object definition
def growFlowers()
^FlowerCase:2: error: expected class or object definition
{
^