methods.flowerpot.FlowerCase.scala.code
def growFlowers()
{
  growFlowersOne()
  middleFlower()
  growFlowersOne()
  goDown()
  growFlowersOne()
  middleFlower()
  growFlowersOne()

def goDown()
{
  setPos(0,9)
}
def middleFlower()
{
  while(!estFaceMur())
  	avance()
  gauche()
  avance()
  avance()
  droite()
  makeFlowers(Color.BLUE)
  avance()
  gauche()
  avance()
  avance()
  droite()
}
def growFlowersOne()
{
  makeFlowers(Color.RED)
  avance()
  avance()
  avance()
  makeFlowers(Color.CYAN)
  changeFlowers()
  makeFlowers(Color.ORANGE)
  changeFlowers()
  makeFlowers(Color.PINK)
  avance()
  avance()
  avance()
  makeFlowers(Color.green)
  while(!estDosMur())
  	recule()
}
def changeFlowers()
{
  for(i <-1 to 3)
  	recule()
  droite()
  avance()
  avance()
  gauche()
}
def marque()
{
  baisseBrosse()
  leveBrosse()
}
def makeFlowers(c:Color)
{
  setCouleurBrosse(c)
  marque()
  avance()
  gauche()
  avance()
  marque()
  recule()
  recule()
  marque()
  avance()
  droite()
  avance()
  marque()
  recule()
  setCouleurBrosse(Color.YELLOW)
  marque()
}